--- a/src/conf/nginx.conf
+++ b/src/conf/nginx.conf
@@ -31,6 +31,9 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
+
+    include bluegreen/bgpub.conf;
+
     include "vhost/myserver.conf";
 
     server {
