--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -4,6 +4,9 @@ init_by_lua '
     package.path = string.format("$s;./lua/com/qtj/bgpub/?.lua;./lua/lib/?.lua;./lua/conf/?.lua;", package.path)
     cjson = require "cjson"
     lua_code_cache = on
+
+
+    bluegreen_api = require("api.bluegreen_api")
 ';
 
 server {
@@ -15,54 +18,52 @@ server {
             access_log off;
     }
 
-    location /bgpub/echo {
-    	echo "bgpub";
-    }
+    # location /bgpub/echo {
+    # 	echo "bgpub";
+    # }
 
-    location /bgpub/content_lua {
-        content_by_lua_block {
-            ngx.say("content: " .. package.path)
-        }
-    }
+    # location /bgpub/content_lua {
+    #     content_by_lua_block {
+    #         ngx.say("content: " .. package.path)
+    #     }
+    # }
 
-    location /bgpub/getservice {
-        content_by_lua_block {
-            local redis = require("dal.redis_dal")
-            local result = redis.conn()
-            ngx.say("result: " .. result)
-            ngx.say("done")
-        }
-    }
+    # location /bgpub/getservice {
+    #     content_by_lua_block {
+    #         local redis = require("dal.redis_dal")
+    #         local result = redis.conn()
+    #         ngx.say("result: " .. result)
+    #         ngx.say("done")
+    #     }
+    # }
 
-    location /bgpub/redis {
-        content_by_lua_block {
-            local redis = require("api.redis_api")
-            local redis_conn = redis.redisconn()
-            ngx.say("done")
-        }
-    }
+    # location /bgpub/redis {
+    #     content_by_lua_block {
+    #         local redis = require("api.redis_api")
+    #         local redis_conn = redis.redisconn()
+    #         ngx.say("done")
+    #     }
+    # }
 
     location /bgpub/ruleset {
         set $service_name $arg_service;
         content_by_lua_block {
             local s_key = ngx.var.service_name
-            local bluegreen_api = require("api.bluegreen_api")
             local conf = {["s_key"] = s_key}
             local code, result = bluegreen_api:ruleset(conf)
-            ngx.say("done " .. code)
+            ngx.say('done' .. code)
         }
-
     }
 
-    location /bgpub/get/all {
-        content_by_lua '
+    location /bgpub/ruleget {
+        content_by_lua_block {
             local rule_data_cache = ngx.shared["dict_rule_data"]
             local switch_keys = rule_data_cache:get_keys(100)  
             local result = {} 
             for k, v in ipairs(switch_keys) do       
                 result[v] = rule_data_cache:get(v)
             end
-            ngx.print(cjson.encode(result) .. "\\n")
-        ';
+            ngx.print(cjson.encode(result) .. "\n")
+        }
     }
 }
