--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -45,10 +45,11 @@ server {
     #     }
     # }
 
+    # 读取redis服务对应的规则数据，存入到 nginx dict 中
     location /bgpub/ruleset {
         set $service_name $arg_service;
         content_by_lua_block {
-            local s_key = ngx.var.service_name
+            local s_key = ngx.var.service_name  --服务名
             local conf = {["s_key"] = s_key}
             local code, result = bluegreen_api:ruleset(conf)
             ngx.say('done' .. code)
