--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -52,8 +52,12 @@ server {
             local s_key = ngx.var.service_name  --服务名
             local conf = {["s_key"] = s_key}
             local code, result = bluegreen_api:ruleset(conf)
-            ngx.say(string.format("%d, %s", code, cjson.encode(result)))
-            -- ngx.say('done' .. code)
+            if not code then
+                ngx.say(string.format("%d, %s", -1, cjson.encode(result)))
+            else
+                ngx.say(string.format("%d, %s", code, cjson.encode(result)))
+            end
+            
         }
     }
 
