can set&delete rule data,  can update switch data

--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -4,9 +4,6 @@ init_by_lua '
     package.path = string.format("$s;./lua/com/qtj/bgpub/?.lua;./lua/lib/?.lua;./lua/conf/?.lua;", package.path)
     cjson = require "cjson"
     lua_code_cache = on
-
-
-    bluegreen_api = require("api.bluegreen_api")
 ';
 
 server {
@@ -51,7 +48,10 @@ server {
         content_by_lua_block {
             local s_key = ngx.var.service_name  --服务名
             local conf = {["s_key"] = s_key}
+
+            local bluegreen_api = require("api.bluegreen_api")
             local code, result = bluegreen_api:ruleset(conf)
+
             if not code then
                 ngx.say(string.format("%d, %s", -1, cjson.encode(result)))
             else
@@ -70,6 +70,47 @@ server {
                 result[v] = rule_data_cache:get(v)
             end
             ngx.print(cjson.encode(result) .. "\n")
+        }
+    }
+
+    location /bgpub/ruledelete {
+        set $service_name $arg_service;
+        content_by_lua_block {
+            local s_key = ngx.var.service_name  --服务名
+            if not s_key or string.len(s_key) < 1 then
+                ngx.say("no service")
+            else 
+                local conf = {["s_key"] = s_key}
+
+                local bluegreen_api = require("api.bluegreen_api")
+                local code, err = bluegreen_api:ruledelete(conf)
+                ngx.say("Succeed delete rule data for [" .. s_key .. "]")
+            end
+        }
+    }
+
+    # update switch value, make sure value in configbase.switch_enum
+    location /bgpub/switchupdate {
+        set $service_name $arg_service;
+        set $switch_value $arg_switch;
+
+        content_by_lua_block {
+            local s_key = ngx.var.service_name  --服务名
+            local switch_value = ngx.var.switch_value  --服务名
+            if not s_key or string.len(s_key) < 1 then
+                ngx.say("no service")
+                return
+            end
+
+            if not switch_value or string.len(switch_value) < 1 then
+                ngx.say("no switch data")
+                return
+            end
+
+            local conf = {["s_key"] = s_key, ["switch_value"] = switch_value}
+            local bluegreen_api = require("api.bluegreen_api")
+            local code, err = bluegreen_api:switchupdate(conf)
+            ngx.say(string.format("Update [%s]'s switch to %s. return code: %s, msg: %s", s_key, switch_value, code, err))
         }
     }
 }
