--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -43,6 +43,8 @@ server {
     # }
 
     # 读取redis服务对应的规则数据，存入到 nginx dict 中
+    #
+    # curl "http://localhost:8899/bgpub/ruleset?service=ss,apollo,aka"
     location /bgpub/ruleset {
         set $service_name $arg_service;
         content_by_lua_block {
@@ -61,6 +63,10 @@ server {
         }
     }
 
+    # get rule data from ngx.shared.dict.  limit 100 item. 
+    # can query a service by:  service=xxx
+    #
+    # curl "http://localhost:8899/bgpub/ruleget?service=apollo"
     location /bgpub/ruleget {
         set $service_name $arg_service;
 
@@ -81,6 +87,9 @@ server {
         }
     }
 
+    # delete rule data by service_name
+    #
+    # curl "http://localhost:8899/bgpub/ruledelete?service=apollo"
     location /bgpub/ruledelete {
         set $service_name $arg_service;
         content_by_lua_block {
@@ -98,6 +107,8 @@ server {
     }
 
     # update switch value, make sure value in configbase.switch_enum
+    #
+    # curl "http://localhost:8899/bgpub/switchupdate?service=apollo&switch=TEST"
     location /bgpub/switchupdate {
         set $service_name $arg_service;
         set $switch_value $arg_switch;
