--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -6,6 +6,11 @@ init_by_lua '
     lua_code_cache = on
 ';
 
+init_worker_by_lua_block {
+    local bluegreen_api = require("api.bluegreen_api")
+    bluegreen_api:init_worker()
+} 
+
 server {
     listen 8899;
     server_name  localhost;
@@ -132,4 +137,19 @@ server {
             ngx.say(string.format("Update [%s]'s switch to %s. return code: %s, msg: %s", s_key, switch_value, code, err))
         }
     }
-}
+
+    location /bgpub/ups/get {
+        content_by_lua_block {
+
+            --local bluegreen_api = require("api.bluegreen_api")
+            --local conf = {}
+            --local code, err = bluegreen_api:upstream_get(conf)
+            local data = {}
+            rawset(data, "id1", "val1")
+            rawset(data, "id2", "val2")
+            ngx.say("data: " .. cjson.encode(data))
+
+            
+        }
+    }
+}   
