--- a/output/conf/nginx.conf
+++ b/output/conf/nginx.conf
@@ -34,7 +34,7 @@ http {
 
     include bluegreen/bgpub.conf;
 
-    include "vhost/myserver.conf";
+    include "vhost/*.conf";
 
     server {
         listen       8081;
