update show ups

--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -139,17 +139,19 @@ server {
     }
 
     location /bgpub/ups/get {
+        set $service_name $arg_service;
+
         content_by_lua_block {
+            local s_key = ngx.var.service_name  --服务名
 
-            --local bluegreen_api = require("api.bluegreen_api")
-            --local conf = {}
-            --local code, err = bluegreen_api:upstream_get(conf)
-            local data = {}
-            rawset(data, "id1", "val1")
-            rawset(data, "id2", "val2")
-            ngx.say("data: " .. cjson.encode(data))
+            local bluegreen_api = require("api.bluegreen_api")
+            local conf = {["s_key"]=s_key}
+            local code, err = bluegreen_api:upstream_get(conf)
 
-            
+            --local data = {}
+            --rawset(data, "id1", "val1")
+            --rawset(data, "id2", "val2")
+            --ngx.say("data: " .. cjson.encode(data))
         }
     }
 }   
