--- a/output/conf/vhost/myserver2.conf
+++ b/output/conf/vhost/myserver2.conf
@@ -1,7 +1,7 @@
 upstream backend2_g1 {
     server 127.0.0.1:8090;
-    server 127.0.0.1:8091;
-    server 127.0.0.1:8092;
+    server 127.0.0.1:8091 backup;
+    server 127.0.0.1:8092 weight=5;
 }
 upstream backend2_g2 {
     server 127.0.0.1:8093;
