update get upstream result

--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -146,7 +146,8 @@ server {
 
             local bluegreen_api = require("api.bluegreen_api")
             local conf = {["s_key"]=s_key}
-            local code, err = bluegreen_api:upstream_get(conf)
+            local result = bluegreen_api:upstream_get(conf)
+            ngx.say(cjson.encode(result))
 
             --local data = {}
             --rawset(data, "id1", "val1")
