get ups by service & group

--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -140,12 +140,14 @@ server {
 
     location /bgpub/ups/get {
         set $service_name $arg_service;
+        set $group_name   $arg_group;
 
         content_by_lua_block {
             local s_key = ngx.var.service_name  --服务名
+            local g_key = ngx.var.group_name  -- group name
+            local conf = {["s_key"] = s_key, ["g_key"] = g_key}
 
             local bluegreen_api = require("api.bluegreen_api")
-            local conf = {["s_key"]=s_key}
             local result = bluegreen_api:upstream_get(conf)
             ngx.say(cjson.encode(result))
 
