save upstream to redis

--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -50,7 +50,7 @@ server {
     # 读取redis服务对应的规则数据，存入到 nginx dict 中
     #
     # curl "http://localhost:8899/bgpub/ruleset?service=ss,apollo,aka"
-    location /bgpub/ruleset {
+    location /bgpub/rule/set {
         set $service_name $arg_service;
         content_by_lua_block {
             local s_key = ngx.var.service_name  --服务名
@@ -72,7 +72,7 @@ server {
     # can query a service by:  service=xxx
     #
     # curl "http://localhost:8899/bgpub/ruleget?service=apollo"
-    location /bgpub/ruleget {
+    location /bgpub/rule/get {
         set $service_name $arg_service;
 
         content_by_lua_block {
@@ -95,7 +95,7 @@ server {
     # delete rule data by service_name
     #
     # curl "http://localhost:8899/bgpub/ruledelete?service=apollo"
-    location /bgpub/ruledelete {
+    location /bgpub/rule/delete {
         set $service_name $arg_service;
         content_by_lua_block {
             local s_key = ngx.var.service_name  --服务名
@@ -114,7 +114,7 @@ server {
     # update switch value, make sure value in configbase.switch_enum
     #
     # curl "http://localhost:8899/bgpub/switchupdate?service=apollo&switch=TEST"
-    location /bgpub/switchupdate {
+    location /bgpub/switch/update {
         set $service_name $arg_service;
         set $switch_value $arg_switch;
 
@@ -150,11 +150,23 @@ server {
             local bluegreen_api = require("api.bluegreen_api")
             local result = bluegreen_api:upstream_get(conf)
             ngx.say(cjson.encode(result))
+        }
+    }
 
-            --local data = {}
-            --rawset(data, "id1", "val1")
-            --rawset(data, "id2", "val2")
-            --ngx.say("data: " .. cjson.encode(data))
+
+    location /bgpub/ups/save_to_redis {
+
+        set $service_name $arg_service;
+        set $group_name   $arg_group;
+
+        content_by_lua_block {
+            local s_key = ngx.var.service_name  --服务名
+            local g_key = ngx.var.group_name  -- group name
+            local conf = {["s_key"] = s_key, ["g_key"] = g_key}
+
+            local bluegreen_api = require("api.bluegreen_api")
+            local result = bluegreen_api:upstream_save_to_redis(conf)
+            ngx.say(cjson.encode(result))
         }
     }
 }   
