--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -153,6 +153,48 @@ server {
         }
     }
 
+    location /bgpub/ups/add_server {
+        set $ups     $arg_upstream;
+        set $ipaddr  $arg_ipaddr;
+
+        content_by_lua_block {
+            local ups_name = ngx.var.ups
+            local ip_addr = ngx.var.ipaddr
+
+            local upstream = require "ngx.upstream"
+            local add_server = upstream.add_server
+
+            -- ngx.print("ip_addr: " .. ip_addr)
+            local ok,err = add_server(ups_name, ip_addr, 1, 1, 10, false)
+            if err ~= nil then
+                ngx.say("Failed add " .. ip_addr .. " to upstream: " .. ups_name)
+            else
+                ngx.say("Succeed add " .. ip_addr .. " to upstream: " .. ups_name)
+            end
+        }
+    }
+
+    location /bgpub/ups/remove_server {
+        set $ups     $arg_upstream;
+        set $ipaddr  $arg_ipaddr;
+
+        content_by_lua_block {
+            local ups_name = ngx.var.ups
+            local ip_addr = ngx.var.ipaddr
+
+            local upstream = require "ngx.upstream"
+            local remove_server = upstream.remove_server
+
+            -- ngx.print("ip_addr: " .. ip_addr)
+            local ok,err = remove_server(ups_name, ip_addr)
+            if err ~= nil then
+                ngx.say("Failed remove " .. ip_addr .. " from upstream: " .. ups_name)
+            else
+                ngx.say("Succeed remove " .. ip_addr .. " from upstream: " .. ups_name)
+            end
+        }
+    }
+
 
     location /bgpub/ups/save_to_redis {
 
