--- a/output/conf/vhost/myserver.conf
+++ b/output/conf/vhost/myserver.conf
@@ -10,9 +10,62 @@ upstream backend_g2 {
 
 #split_clients "${remote_addr}AAA" $variant {
 #split_clients "${arg_name}" $variant {
-split_clients "${arg_name} % 4" $variant {
+split_clients "${arg_name}" $variant {
 	50% 1;
 	50% 2;
+}
+
+server {
+	listen 127.0.0.1:8083;
+
+    location /echo {
+    	set $cur_upstream "backend";
+    	rewrite_by_lua_block {
+            local s_key = ngx.var.cur_upstream  --服务名
+            local conf = {["s_key"] = s_key}
+
+            local collection_utils = require("utils.collection_utils")
+            local bluegreen_api = require("api.bluegreen_api")
+            local result = bluegreen_api:upstream_get(conf)
+            -- ngx.say(cjson.encode(result))
+
+            local count = 0  
+
+            local ups = {}
+            local ups_name = {}
+            if result ~= nil then
+            	for k, v in pairs(result)  do 
+            		count = count + 1 
+            		ups[k] = v
+            		ups_name[count] = k
+            	end
+            end
+
+            if count == 1 then
+            	ngx.var.cur_upstream = next(result)
+            elseif count == 2 then
+            	local blue = ups_name[1]
+            	local green = ups_name[2]
+
+            	local blue_server_size = collection_utils.table_size(ups[blue])
+            	local green_server_size = collection_utils.table_size(ups[green])
+
+            	ngx.log(ngx.ERR, string.format("====> %s: %s; %s: %s", blue, tostring(blue_server_size), green, tostring(green_server_size)))
+
+            	if blue_server_size > green_server_size then
+            		ngx.var.cur_upstream = blue
+            	else
+            		ngx.var.cur_upstream = green
+            	end
+            end            
+        }
+
+        # echo "ups: $cur_upstream";
+
+        proxy_pass http://$cur_upstream;
+
+		# proxy_pass http://backend_g${variant};
+	} 
 }
 
 server {
@@ -21,9 +74,11 @@ server {
     location /echo {
 		#proxy_pass http://backend;
 		#proxy_pass http://127.0.0.1${variant};
-		set_by_lua $variant '
-			return 2
-		';
+
+		# echo "resu: $variant";
+		# set_by_lua $variant '
+		# 	return 2
+		# ';
 		proxy_pass http://backend_g${variant};
 	} 
 }
@@ -31,7 +86,7 @@ server {
 	listen 127.0.0.1:8090;
 
     location /echo {
-		echo "G18090"; 
+		echo "G18090_$arg_name"; 
 	} 
 }
 
@@ -46,7 +101,7 @@ server {
 	listen 127.0.0.1:8092;
 
     location /echo {
-		echo "G18092";
+		echo "G18092_$arg_name";
 	} 
 }
 server {
