ups.add_server only valid for current worker.

--- a/output/conf/vhost/myserver.conf
+++ b/output/conf/vhost/myserver.conf
@@ -50,7 +50,7 @@ server {
             	local blue_server_size = collection_utils.table_size(ups[blue])
             	local green_server_size = collection_utils.table_size(ups[green])
 
-            	ngx.log(ngx.ERR, string.format("====> %s: %s; %s: %s", blue, tostring(blue_server_size), green, tostring(green_server_size)))
+            	ngx.log(ngx.ERR, string.format("====> %s: %s; %s: %s, %s", blue, tostring(blue_server_size), green, tostring(green_server_size), tostring(ngx.worker.id())))
 
             	if blue_server_size > green_server_size then
             		ngx.var.cur_upstream = blue
