--- a/output/conf/vhost/myserver.conf
+++ b/output/conf/vhost/myserver.conf
@@ -62,10 +62,14 @@ server {
 
         # echo "ups: $cur_upstream";
 
+        set $cur_upstream "backend2_g1";
+
         proxy_pass http://$cur_upstream;
 
 		# proxy_pass http://backend_g${variant};
 	} 
+
+
 }
 
 server {
