--- a/output/conf/nginx.conf
+++ b/output/conf/nginx.conf
@@ -1,6 +1,9 @@
 
 #user  nobody;
 worker_processes  2;
+# worker_processes auto;
+# worker_processes     4;
+# worker_cpu_affinity 01 10 01 10;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -11,6 +14,7 @@ worker_processes  2;
 
 
 events {
+
     worker_connections  1024;
 
     accept_mutex off;
