--- a/output/conf/vhost/myserver2.conf
+++ b/output/conf/vhost/myserver2.conf
@@ -4,7 +4,7 @@ upstream backend2_g2 {
     server 127.0.0.1:8092 weight=5;
 }
 upstream backend2_g1 {
-    server 127.0.0.1:8093;
+    server 127.0.0.1:8093 down;
 }
 
 upstream backend3_g2 {
