--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -1,4 +1,5 @@
 lua_shared_dict dict_rule_data 16m;
+lua_shared_dict dogs 1m;
 
 init_by_lua '
     package.path = string.format("$s;./lua/com/qtj/bgpub/?.lua;./lua/lib/?.lua;./lua/conf/?.lua;", package.path)
@@ -18,6 +19,34 @@ server {
     location = /favicon.ico {
             log_not_found off;
             access_log off;
+    }
+
+    location /echo {
+        content_by_lua_block {
+            local workCount = ngx.worker.count()
+            if workCount ~= nil and workCount > 0 then
+                local i = 1
+                repeat 
+                    ngx.say("xxxx: " .. i)
+                    i = i + 1
+                until workCount < i
+            end
+            ngx.say("yes echo" .. ngx.worker.count())
+        }
+    }
+    
+    location /ffi {
+        content_by_lua_block {
+            local ffi = require "ffi"
+
+            local my_info = require("jack")
+            ffi.cdef[[
+                int printf(const char* fmt, ...);
+            ]]
+
+            ffi.C.printf("Hello %s", world)  
+            ngx.say(package.path)          
+        }
     }
 
     # location /bgpub/echo {
@@ -166,10 +195,12 @@ server {
 
             -- ngx.print("ip_addr: " .. ip_addr)
             local ok,err = add_server(ups_name, ip_addr, 1, 1, 10, false)
+
+            local ngxPid = ngx.worker.id()
             if err ~= nil then
-                ngx.say("Failed add " .. ip_addr .. " to upstream: " .. ups_name)
+                ngx.say(tostring(ngxPid) .. " -> Failed add " .. ip_addr .. " to upstream: " .. ups_name)
             else
-                ngx.say("Succeed add " .. ip_addr .. " to upstream: " .. ups_name)
+                ngx.say(tostring(ngxPid) .. " -> Succeed add " .. ip_addr .. " to upstream: " .. ups_name)
             end
         }
     }
@@ -187,10 +218,11 @@ server {
 
             -- ngx.print("ip_addr: " .. ip_addr)
             local ok,err = remove_server(ups_name, ip_addr)
+            local ngxPid = ngx.worker.id()
             if err ~= nil then
-                ngx.say("Failed remove " .. ip_addr .. " from upstream: " .. ups_name)
+                ngx.say(tostring(ngxPid) .. " -> Failed remove " .. ip_addr .. " from upstream: " .. ups_name)
             else
-                ngx.say("Succeed remove " .. ip_addr .. " from upstream: " .. ups_name)
+                ngx.say(tostring(ngxPid) .. " -> Succeed remove " .. ip_addr .. " from upstream: " .. ups_name)
             end
         }
     }
