--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -34,47 +34,6 @@ server {
             ngx.say("yes echo" .. ngx.worker.count())
         }
     }
-    
-    location /ffi {
-        content_by_lua_block {
-            local ffi = require "ffi"
-
-            local my_info = require("jack")
-            ffi.cdef[[
-                int printf(const char* fmt, ...);
-            ]]
-
-            ffi.C.printf("Hello %s", world)  
-            ngx.say(package.path)          
-        }
-    }
-
-    # location /bgpub/echo {
-    # 	echo "bgpub";
-    # }
-
-    # location /bgpub/content_lua {
-    #     content_by_lua_block {
-    #         ngx.say("content: " .. package.path)
-    #     }
-    # }
-
-    # location /bgpub/getservice {
-    #     content_by_lua_block {
-    #         local redis = require("dal.redis_dal")
-    #         local result = redis.conn()
-    #         ngx.say("result: " .. result)
-    #         ngx.say("done")
-    #     }
-    # }
-
-    # location /bgpub/redis {
-    #     content_by_lua_block {
-    #         local redis = require("api.redis_api")
-    #         local redis_conn = redis.redisconn()
-    #         ngx.say("done")
-    #     }
-    # }
 
     # 读取redis服务对应的规则数据，存入到 nginx dict 中
     #
@@ -167,80 +126,18 @@ server {
         }
     }
 
-    location /bgpub/ups/get {
-        set $service_name $arg_service;
-        set $group_name   $arg_group;
-
-        content_by_lua_block {
-            local s_key = ngx.var.service_name  --服务名
-            local g_key = ngx.var.group_name  -- group name
-            local conf = {["s_key"] = s_key, ["g_key"] = g_key}
-
-            local bluegreen_api = require("api.bluegreen_api")
-            local result = bluegreen_api:upstream_get(conf)
-            ngx.say(cjson.encode(result))
-        }
+    location /dynamic {
+        allow 127.0.0.1;
+        deny all;
+        dynamic_upstream;
     }
-
-    location /bgpub/ups/add_server {
-        set $ups     $arg_upstream;
-        set $ipaddr  $arg_ipaddr;
-
-        content_by_lua_block {
-            local ups_name = ngx.var.ups
-            local ip_addr = ngx.var.ipaddr
-
-            local upstream = require "ngx.upstream"
-            local add_server = upstream.add_server
-
-            -- ngx.print("ip_addr: " .. ip_addr)
-            local ok,err = add_server(ups_name, ip_addr, 1, 1, 10, false)
-
-            local ngxPid = ngx.worker.id()
-            if err ~= nil then
-                ngx.say(tostring(ngxPid) .. " -> Failed add " .. ip_addr .. " to upstream: " .. ups_name)
-            else
-                ngx.say(tostring(ngxPid) .. " -> Succeed add " .. ip_addr .. " to upstream: " .. ups_name)
-            end
-        }
+    
+    location  /monitor.html {
+        root /opt/app/biz-openresty/upssystem;
     }
+    
 
-    location /bgpub/ups/remove_server {
-        set $ups     $arg_upstream;
-        set $ipaddr  $arg_ipaddr;
-
-        content_by_lua_block {
-            local ups_name = ngx.var.ups
-            local ip_addr = ngx.var.ipaddr
-
-            local upstream = require "ngx.upstream"
-            local remove_server = upstream.remove_server
-
-            -- ngx.print("ip_addr: " .. ip_addr)
-            local ok,err = remove_server(ups_name, ip_addr)
-            local ngxPid = ngx.worker.id()
-            if err ~= nil then
-                ngx.say(tostring(ngxPid) .. " -> Failed remove " .. ip_addr .. " from upstream: " .. ups_name)
-            else
-                ngx.say(tostring(ngxPid) .. " -> Succeed remove " .. ip_addr .. " from upstream: " .. ups_name)
-            end
-        }
-    }
-
-
-    location /bgpub/ups/save_to_redis {
-
-        set $service_name $arg_service;
-        set $group_name   $arg_group;
-
-        content_by_lua_block {
-            local s_key = ngx.var.service_name  --服务名
-            local g_key = ngx.var.group_name  -- group name
-            local conf = {["s_key"] = s_key, ["g_key"] = g_key}
-
-            local bluegreen_api = require("api.bluegreen_api")
-            local result = bluegreen_api:upstream_save_to_redis(conf)
-            ngx.say(cjson.encode(result))
-        }
+    location / {
+        return 403;
     }
 }   
