--- a/output/conf/vhost/myserver.conf
+++ b/output/conf/vhost/myserver.conf
@@ -1,73 +1,70 @@
-upstream backend_g1 {
-    server 127.0.0.1:8090;
-    server 127.0.0.1:8091;
-    server 127.0.0.1:8092;
-}
-upstream backend_g2 {
-    server 127.0.0.1:8093;
-}
-
-
-#split_clients "${remote_addr}AAA" $variant {
-#split_clients "${arg_name}" $variant {
-split_clients "${arg_name}" $variant {
-	50% 1;
-	50% 2;
-}
+# #split_clients "${remote_addr}AAA" $variant {
+# #split_clients "${arg_name}" $variant {
+# split_clients "${arg_name}" $variant {
+# 	50% 1;
+# 	50% 2;
+# }
 
 server {
 	listen 127.0.0.1:8083;
 
-    location /echo {
-    	set $cur_upstream "backend";
-    	rewrite_by_lua_block {
-            local s_key = ngx.var.cur_upstream  --服务名
-            local conf = {["s_key"] = s_key}
+	location /echo {
+		set $_UPS apollo_g2;
+		rewrite_by_lua_file 'lua/com/qtj/bgpub/biz/rewrite_biz.lua';
 
-            local collection_utils = require("utils.collection_utils")
-            local bluegreen_api = require("api.bluegreen_api")
-            local result = bluegreen_api:upstream_get(conf)
-            -- ngx.say(cjson.encode(result))
+		proxy_pass http://$_UPS;
+	}
 
-            local count = 0  
+ #    location /echo {
+ #    	set $cur_upstream "backend";
+ #    	rewrite_by_lua_block {
+ #            local s_key = ngx.var.cur_upstream  --服务名
+ #            local conf = {["s_key"] = s_key}
 
-            local ups = {}
-            local ups_name = {}
-            if result ~= nil then
-            	for k, v in pairs(result)  do 
-            		count = count + 1 
-            		ups[k] = v
-            		ups_name[count] = k
-            	end
-            end
+ #            local collection_utils = require("utils.collection_utils")
+ #            local bluegreen_api = require("api.bluegreen_api")
+ #            local result = bluegreen_api:upstream_get(conf)
+ #            -- ngx.say(cjson.encode(result))
 
-            if count == 1 then
-            	ngx.var.cur_upstream = next(result)
-            elseif count == 2 then
-            	local blue = ups_name[1]
-            	local green = ups_name[2]
+ #            local count = 0  
 
-            	local blue_server_size = collection_utils.table_size(ups[blue])
-            	local green_server_size = collection_utils.table_size(ups[green])
+ #            local ups = {}
+ #            local ups_name = {}
+ #            if result ~= nil then
+ #            	for k, v in pairs(result)  do 
+ #            		count = count + 1 
+ #            		ups[k] = v
+ #            		ups_name[count] = k
+ #            	end
+ #            end
 
-            	ngx.log(ngx.ERR, string.format("====> %s: %s; %s: %s, %s", blue, tostring(blue_server_size), green, tostring(green_server_size), tostring(ngx.worker.id())))
+ #            if count == 1 then
+ #            	ngx.var.cur_upstream = next(result)
+ #            elseif count == 2 then
+ #            	local blue = ups_name[1]
+ #            	local green = ups_name[2]
 
-            	if blue_server_size > green_server_size then
-            		ngx.var.cur_upstream = blue
-            	else
-            		ngx.var.cur_upstream = green
-            	end
-            end            
-        }
+ #            	local blue_server_size = collection_utils.table_size(ups[blue])
+ #            	local green_server_size = collection_utils.table_size(ups[green])
 
-        # echo "ups: $cur_upstream";
+ #            	ngx.log(ngx.ERR, string.format("====> %s: %s; %s: %s, %s", blue, tostring(blue_server_size), green, tostring(green_server_size), tostring(ngx.worker.id())))
 
-        set $cur_upstream "backend2_g1";
+ #            	if blue_server_size > green_server_size then
+ #            		ngx.var.cur_upstream = blue
+ #            	else
+ #            		ngx.var.cur_upstream = green
+ #            	end
+ #            end            
+ #        }
 
-        proxy_pass http://$cur_upstream;
+ #        # echo "ups: $cur_upstream";
 
-		# proxy_pass http://backend_g${variant};
-	} 
+ #        set $cur_upstream "backend2_g1";
+
+ #        proxy_pass http://$cur_upstream;
+
+	# 	# proxy_pass http://backend_g${variant};
+	# } 
 
 
 }
@@ -80,9 +77,9 @@ server {
 		#proxy_pass http://127.0.0.1${variant};
 
 		# echo "resu: $variant";
-		# set_by_lua $variant '
-		# 	return 2
-		# ';
+		set_by_lua $variant '
+			return 1
+		';
 		proxy_pass http://backend_g${variant};
 	} 
 }
