add gray policy

--- a/output/conf/vhost/myserver.conf
+++ b/output/conf/vhost/myserver.conf
@@ -8,11 +8,14 @@
 server {
 	listen 127.0.0.1:8083;
 
+	set $_S_ID apollo;
+
 	location /echo {
-		set $_UPS apollo_g2;
+		set $_UPS apollo;
 		rewrite_by_lua_file 'lua/com/qtj/bgpub/biz/rewrite_biz.lua';
 
-		proxy_pass http://$_UPS;
+		# proxy_pass http://$_UPS;
+		echo "ups: " + $_UPS;
 	}
 
  #    location /echo {
