--- a/output/conf/vhost/upstream.conf
+++ b/output/conf/vhost/upstream.conf
@@ -3,6 +3,7 @@ upstream backend_g1 {
     server 127.0.0.1:8090;
     server 127.0.0.1:8091;
     server 127.0.0.1:8092;
+    server 127.0.0.1:8093;
 }
 upstream backend_g2 {
     zone zone_backend_g2 2m;
