--- a/output/conf/bluegreen/bgpub.conf
+++ b/output/conf/bluegreen/bgpub.conf
@@ -21,20 +21,6 @@ server {
             access_log off;
     }
 
-    location /echo {
-        content_by_lua_block {
-            local workCount = ngx.worker.count()
-            if workCount ~= nil and workCount > 0 then
-                local i = 1
-                repeat 
-                    ngx.say("xxxx: " .. i)
-                    i = i + 1
-                until workCount < i
-            end
-            ngx.say("yes echo" .. ngx.worker.count())
-        }
-    }
-
     # 读取redis服务对应的规则数据，存入到 nginx dict 中
     #
     # curl "http://localhost:8899/bgpub/ruleset?service=ss,apollo,aka"
@@ -69,13 +55,7 @@ server {
 
             local bluegreen_api = require("api.bluegreen_api")
             local result, err = bluegreen_api:ruleget(conf)
-             
-            --local rule_data_cache = ngx.shared["dict_rule_data"]
-            --local switch_keys = rule_data_cache:get_keys(100)  
-            --local result = {} 
-            --for k, v in ipairs(switch_keys) do       
-            --    result[v] = rule_data_cache:get(v)
-            --end
+
             ngx.print(cjson.encode(result) .. "\n")
         }
     }
@@ -126,17 +106,19 @@ server {
         }
     }
 
+    # 动态upstream配置，参考 https://github.com/cubicdaiya/ngx_dynamic_upstream
     location /dynamic {
         allow 127.0.0.1;
         deny all;
         dynamic_upstream;
     }
     
+    # 监控页
     location  /monitor.html {
         root /opt/app/biz-openresty/upssystem;
     }
     
-
+    # 403 限制
     location / {
         return 403;
     }
