--- a/output/conf/nginx.conf
+++ b/output/conf/nginx.conf
@@ -39,34 +39,34 @@ http {
 
     #gzip  on;
 
+    # 蓝绿发布 管理端接口
     include bluegreen/bgpub.conf;
 
+    # 实际 host 配置
     include "vhost/*.conf";
 
-    server {
-        listen       8081;
-        server_name  localhost;
+    # server {
+    #     listen       8081;
+    #     server_name  localhost;
 
-        #charset koi8-r;
+    #     #access_log  logs/host.access.log  main;
+    #     location /echo {
+    # 	    echo "hello word.";
+    # 	}
 
-        #access_log  logs/host.access.log  main;
-        location /echo {
-	    echo "hello word.";
-	}
+    #     location / {
+    #         root   html;
+    #         index  index.html index.htm;
+    #     }
 
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
+    #     #error_page  404              /404.html;
 
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-    }
+    #     # redirect server error pages to the static page /50x.html
+    #     #
+    #     error_page   500 502 503 504  /50x.html;
+    #     location = /50x.html {
+    #         root   html;
+    #     }
+    # }
 
 }
