--- a/output/conf/vhost/upstream.conf
+++ b/output/conf/vhost/upstream.conf
@@ -1,3 +1,5 @@
+# 每个 upstream 通过增加 zone zone_upstream_name  nm 来保存共享 server
+
 upstream backend_g1 {
     zone zone_backend_g1 2m;
     server 127.0.0.1:8090;
